[project]
name = "advanced-rag-research"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "llama-index>=0.13.1",
    "llama-index-embeddings-huggingface>=0.6.0",
    "llama-index-vector-stores-mongodb>=0.8.0",
    "matplotlib>=3.10.5",
    "openai>=1.99.9",
    "pandas>=2.2.3",
    "pymongo>=4.14.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
]
